sezioni canzoni tradotte

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -86,10 +86,10 @@
 				</ul><!-- /.dl-submenu -->
 			</li>
 			<li>
-				<a href="#">Posts</a>
+				<a href="#">Battute</a>
 				<ul class="dl-submenu">
-					<li><a href="{{ site.url }}/posts/">All Posts</a></li>
-					<li><a href="{{ site.url }}/tags/">All Tags</a></li>
+					<li><a href="{{ site.url }}/posts/">Tutte le battute</a></li>
+					<li><a href="{{ site.url }}/tags/">Tutti i tag</a></li>
 				</ul>
 			</li>
 			{% for link in site.data.navigation %}
