--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,7 +36,10 @@ layout: compress
                          About
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/posts">
-                         Posts
+                         Battute
+                         </a>
+			 <a class="btn zoombtn" href="{{ site.url }}/projects">
+                         Canzoni tradotte
                          </a>
                  </h3>
             </div>
